--- a/CS452 Project 1/README
+++ b/CS452 Project 1/README
@@ -1,6 +1,6 @@
-## Project Number/Title 
+## Project 1 - Mergesort
 
-* Author: Your Name
+* Author: Colten Davis
 * Class: CS452/CS552 [Operating Systems] Section #num
 
 ## Overview
