--- a/CS452 Project 1/README
+++ b/CS452 Project 1/README
@@ -1,7 +1,7 @@
 ## Project 1 - Mergesort
 
 * Author: Colten Davis
-* Class: CS452/CS552 [Operating Systems] Section #num
+* Class: CS452/CS552 [Operating Systems] Section 001
 
 ## Overview
 This project aimed to convert a non-threaded version of mergesort into a threaded version.
