--- a/CS452_P2/README
+++ b/CS452_P2/README
@@ -1,4 +1,4 @@
-## Project 1 - Mergesort
+## Project 2 - Thread Safe Library
 
 * Author: Colten Davis
 * Class: CS452/CS552 [Operating Systems] Section 001
