--- a/CS452_P2/README
+++ b/CS452_P2/README
@@ -71,7 +71,7 @@ the built in function, such as making the removeFront function, then only changi
 
 I'm still not familiar with C as a language, so I have to rely heavily on man pages, Stack Overflow, anything Google can show me.
 I struggled with most, as I said, with the tsb_createList. A few Stack Overflow posts help get me on the right direction, 
-along with our class notes. 
+along with our class notes. I would consider this a challenging project for me. 
 
 
 ## Sources used
